--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
   "dependencies": {
     "flow-bin": "^0.78.0",
     "react": "^16.2.0",
-    "react-dom": "^16.2.0"
+    "react-dom": "^16.2.0",
+    "react-skeleton-css": "^1.1.0",
+    "skeleton-css": "^2.0.4"
   },
   "proxy": "http://localhost:4567/"
 }
